--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <h3>Hello World!</h3>
             </div>
             <!-- New HTML content goes here! -->
+            <div class="my-style">
+                <h3>Oscar Clark: Laeving all his earthly possesions so his hamster</h3>
+            </div><
             <div class="code-ninja-style">
                 <h3>This is first time using GitHub!</h3>
             </div>
